# aoc

day1/: day1.cabal
day1/src/: Lib.hs
day1/test/: Spec.hs
day2/: day2.cabal
day2/src/: Lib.hs
day2/test/: Spec.hs
day3/: day3.cabal
day3/src/: Lib.hs
day3/test/: Spec.hs
day4/src/: Lib.hs
day4/test/: Spec.hs
days5plus/: days5plus.cabal
days5plus/app/: Main.hs
days5plus/src/: AocCommon.hs  Day10Lib.hs  Day5Lib.hs  Day6Lib.hs  Day7Lib.hs  Day8Lib.hs  Day9Lib.hs
days5plus/test/: Day10Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs  Spec.hs
