name:                days5plus
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lunky/days5plus#readme
license:             BSD3
license-file:        LICENSE
author:              Quinn Wilson
maintainer:          github@midworld.org
copyright:           non
category:            don't put me in a box
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day5Lib Day6Lib Day7Lib AocCommon Day8Lib Day9Lib Day10Lib
  build-depends:       base >= 4.7 && < 5
                       ,split
                       ,parsec
                       ,cryptohash-md5
                       ,bytestring
                       ,base16-bytestring
                       ,regex-pcre-builtin
  default-language:    Haskell2010

executable days5plus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , days5plus
  default-language:    Haskell2010

test-suite days5plus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , days5plus
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lunky/days5plus
